{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 257,
  "lineage": "bb194d34-54a3-7eea-2dbc-73273c7e75a4",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc6cf99992956a4a",
            "arn": "arn:aws:ec2:us-east-1:787156389587:instance/i-0077b044d34631c98",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vadim-final-project-ec2-profile",
            "id": "i-0077b044d34631c98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08578ea3e809e9ad7",
            "private_dns": "ip-10-0-1-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.118",
            "public_dns": "ec2-18-209-94-109.compute-1.amazonaws.com",
            "public_ip": "18.209.94.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0952cb10e50dead95",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09313f8328726a094",
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-ec2-A"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-ec2-A"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058c5bdd958274cc6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.data.aws_ami.amazon_linux",
            "module.efs.aws_efs_file_system.this",
            "module.efs.aws_efs_mount_target.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.efs",
            "module.security.aws_security_group.public_ec2",
            "module.storage.aws_s3_bucket.first",
            "module.storage.aws_s3_object.image"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc6cf99992956a4a",
            "arn": "arn:aws:ec2:us-east-1:787156389587:instance/i-09a9ea0044db439dd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vadim-final-project-ec2-profile",
            "id": "i-09a9ea0044db439dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05daa74e2e919126b",
            "private_dns": "ip-10-0-2-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.78",
            "public_dns": "ec2-13-220-27-179.compute-1.amazonaws.com",
            "public_ip": "13.220.27.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad787e458a07590c",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-016f4a627c5eb970c",
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-ec2-B"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-ec2-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058c5bdd958274cc6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2.aws_iam_instance_profile.ec2_profile",
            "module.ec2.aws_iam_role.ec2_role",
            "module.ec2.data.aws_ami.amazon_linux",
            "module.efs.aws_efs_file_system.this",
            "module.efs.aws_efs_mount_target.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.efs",
            "module.security.aws_security_group.public_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787156389587:internet-gateway/igw-06b7fa81ba3baacd5",
            "id": "igw-06b7fa81ba3baacd5",
            "owner_id": "787156389587",
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-ig"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-ig"
            },
            "vpc_id": "vpc-00d7225a181cadc4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787156389587:route-table/rtb-036772651557b8c6a",
            "id": "rtb-036772651557b8c6a",
            "owner_id": "787156389587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b7fa81ba3baacd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d7225a181cadc4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddbb8e546e96cd8e",
            "route_table_id": "rtb-036772651557b8c6a",
            "subnet_id": "subnet-09313f8328726a094"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023628c497b4297ca",
            "route_table_id": "rtb-036772651557b8c6a",
            "subnet_id": "subnet-016f4a627c5eb970c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787156389587:subnet/subnet-09313f8328726a094",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09313f8328726a094",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787156389587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-00d7225a181cadc4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787156389587:subnet/subnet-016f4a627c5eb970c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016f4a627c5eb970c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "787156389587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-public-2",
              "Tier": "public"
            },
            "vpc_id": "vpc-00d7225a181cadc4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787156389587:vpc/vpc-00d7225a181cadc4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09aca39ab6d76515f",
            "default_route_table_id": "rtb-048d82f6a5708865a",
            "default_security_group_id": "sg-0d7d9b417f969c5f0",
            "dhcp_options_id": "dopt-0fdcc14d75e85cd22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d7225a181cadc4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048d82f6a5708865a",
            "owner_id": "787156389587",
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787156389587:security-group/sg-0f0145cc6d4bbd691",
            "description": "Allow NFS traffic from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0145cc6d4bbd691",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from EC2",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058c5bdd958274cc6"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "vadim-final-project-sg-efs",
            "name_prefix": "",
            "owner_id": "787156389587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-sg-efs"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-sg-efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d7225a181cadc4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.public_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787156389587:security-group/sg-0becc1776654bed38",
            "description": "Security group for private EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0becc1776654bed38",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vadim-final-project-sg-private-ec2",
            "name_prefix": "",
            "owner_id": "787156389587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-sg-private-ec2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-sg-private-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d7225a181cadc4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:787156389587:security-group/sg-058c5bdd958274cc6",
            "description": "Security group for public EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NFS to EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "id": "sg-058c5bdd958274cc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vadim-final-project-sg-public-ec2",
            "name_prefix": "",
            "owner_id": "787156389587",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vadim-final-project-sg-public-ec2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vadim-final-project-sg-public-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d7225a181cadc4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}